@@ -1,3 +1,9 @@
+2008-08-06  Johan Dahlin  <johan@gnome.org>
+
+	* glib/pyglib.c (pyglib_init):
+	return in case of error instead of trying to access the internal
+	types.
+
 2008-08-06  Paul Pogonyshev  <pogonyshev@gmx.net>
 
 	* gio/gio.override: Add 'pygio_do_icon_richcompare' prototype to
